# animal-detection-cv

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
notebooks/: model.ipynb
src/: __init__.py  app_gui.py  dataset.py  inference.py  train.py
utils/: __init__.py  visualization.py
