[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "animal-detection"
version = "1.0.0"
description = "Animal Detection System using Faster R-CNN"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["src*", "config*", "utils*"]
